--- a/style/style.css
+++ b/style/style.css
@@ -46,3 +46,15 @@ button {
     0 0 102px rgb(212, 171, 236),
     0 0 151px rgb(212, 171, 236);
 }
+@media screen and (max-width:420px) {
+  p {
+    font-size: 100px;
+    text-align: center;
+    margin-bottom: 0;
+  }
+ 
+  #backgroundVideo {
+    width: 420px;
+    object-fit: cover;
+  }
+}
